single repo init

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/1.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/1.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
@@ -80,7 +80,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/2.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/2.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://ramahendawi.b-cdn.net/3.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/3.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
@@ -104,7 +104,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/4.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/4.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
@@ -116,7 +116,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/5.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/5.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
@@ -128,7 +128,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/6.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/6.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
@@ -140,7 +140,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/7.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/7.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
@@ -152,7 +152,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/8.png" />
+                    <img src="https://ramahendawi.b-cdn.net/portfolio/images/8.png" />
                 </div>
                 <div class="project-info">
                     <p class="project-category">Script Writing & Video Production</p>
