--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>portfolio</title>
     <!-- <link rel="stylesheet" href="css/all.min.css"> -->
      <link rel="stylesheet" href="https://ramahendawi.b-cdn.net/portfolio/css/all.min.css">
-    <link rel="stylesheet" href="https://ramahendawi.b-cdn.net/portfolio/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
