--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <footer class="footer" >
         <p class="footer-title" >Copyrights @ <span> Rama Al-Hendawy</span></p>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://ps.linkedin.com/in/rama-naser-al-hendawy-802b45368"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
