linked in link added to header section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>User Interface Development</h3>
             <a href="#projects" class="main-btn">View my work</a>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://ps.linkedin.com/in/rama-naser-al-hendawy-802b45368"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
